# kismet

./: .gitignore  README.md  model_costs.yml  pyproject.toml
docs/: memory.md
docs/superpowers/plans/: 2026-04-28-kismet.md  2026-05-06-mage-pet.md  2026-05-07-terminal-mage-pet.md  2026-05-12-altar-redesign.md  2026-05-12-ascii-art-redesign.md  2026-05-12-rich-layout-redesign.md
docs/superpowers/specs/: 2026-04-28-kismet-design.md  2026-05-06-mage-pet-design.md  2026-05-07-terminal-mage-pet-design.md  2026-05-12-altar-redesign.md  2026-05-12-ascii-art-redesign.md  2026-05-12-tarot-animation-design.md
kismet/: cli.py  config.py  presence.py
kismet/agent/: agent.py  session.py
kismet/agent/tools/: divine.py  git.py  mac_sensor.py  mine.py  renderer.py
kismet/mage/: __main__.py  animation.py  pet.py  state_watcher.py  terminal_pet.py
scripts/: gen_placeholder_gifs.py
tests/: conftest.py  test_agent.py  test_agent_presence.py  test_agent_start_mage.py  test_cli_mage.py  test_config.py  test_detect_mage_mode.py  test_divine.py  test_git.py  test_mac_sensor.py  test_mine.py  test_presence.py  test_renderer.py  test_session.py
tests/mage/: test_animation.py  test_pet.py  test_terminal_pet.py
